feat(cloudant): use IBM SDK
Use IBM SDK Cloudant and remove ektorp and old Cloudant library.

Signed-off-by: Gaurav Mishra <gmishx@gmail.com>