@@ -1,5 +1,5 @@
 /*
- * Copyright Siemens AG, 2021. Part of the SW360 Portal Project.
+ * Copyright Siemens AG, 2021, 2024. Part of the SW360 Portal Project.
  *
  * This program and the accompanying materials are made
  * available under the terms of the Eclipse Public License 2.0
@@ -9,21 +9,13 @@
  */
 package org.eclipse.sw360.datahandler.cloudantclient;
 
-import java.io.IOException;
-import java.io.InputStream;
-import java.lang.reflect.Field;
-import java.util.Collection;
-import java.util.Collections;
-import java.util.HashSet;
-import java.util.List;
-import java.util.Objects;
-import java.util.Set;
-import java.util.TreeSet;
-import java.util.ArrayList;
-import java.util.function.Supplier;
-import java.util.stream.Collectors;
-
-import org.apache.http.HttpStatus;
+import com.google.common.collect.ImmutableList;
+import com.google.common.collect.Lists;
+import com.google.common.collect.Sets;
+import com.google.gson.Gson;
+import com.ibm.cloud.cloudant.v1.Cloudant;
+import com.ibm.cloud.cloudant.v1.model.*;
+import com.ibm.cloud.sdk.core.service.exception.ServiceResponseException;
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
 import org.apache.thrift.TBase;
@@ -32,40 +24,36 @@ import org.eclipse.sw360.datahandler.common.CommonUtils;
 import org.eclipse.sw360.datahandler.thrift.ThriftUtils;
 import org.eclipse.sw360.datahandler.thrift.attachments.AttachmentContent;
 
-import com.cloudant.client.api.CloudantClient;
-import com.cloudant.client.api.Database;
-import com.cloudant.client.api.DesignDocumentManager;
-import com.cloudant.client.api.model.Response;
-import com.cloudant.client.api.query.QueryResult;
-import com.cloudant.client.api.views.Key;
-import com.cloudant.client.api.views.ViewRequest;
-import com.cloudant.client.api.views.ViewRequestBuilder;
-import com.cloudant.client.api.views.ViewResponse;
-import com.cloudant.client.api.views.ViewResponse.Row;
-import com.cloudant.client.org.lightcouch.NoDocumentException;
-import com.google.common.collect.ImmutableList;
-import com.google.common.collect.Lists;
-import com.google.common.collect.Sets;
+import java.io.InputStream;
+import java.lang.reflect.Field;
+import java.util.Arrays;
+import java.util.Collection;
+import java.util.Collections;
+import java.util.HashSet;
+import java.util.List;
+import java.util.Map;
+import java.util.Objects;
+import java.util.Set;
+import java.util.TreeSet;
+import java.util.stream.Collectors;
 
 /**
  * Database Connector to a CouchDB database
- *
  */
 public class DatabaseConnectorCloudant {
-    
+
     private final Logger log = LogManager.getLogger(DatabaseConnectorCloudant.class);
     private static final ImmutableList<String> entitiesWithNonMatchingStructType = ImmutableList
             .of("moderation", "attachment", "usedReleaseRelation");
 
     private final String dbName;
     private final DatabaseInstanceCloudant instance;
-    private final Database database;
 
-    public DatabaseConnectorCloudant(Supplier<CloudantClient> client, String dbName) {
+    public DatabaseConnectorCloudant(Cloudant client, String dbName) {
         this.instance = new DatabaseInstanceCloudant(client);
         this.dbName = dbName;
-        // Create the database if it does not exists yet
-        this.database = instance.createDB(dbName);
+        // Create the database if it does not exist yet
+        instance.createDB(dbName);
     }
 
     public String getDbName() {
@@ -73,21 +61,16 @@ public class DatabaseConnectorCloudant {
     }
 
     public void update(Object document) {
-        Response resp;
+        DocumentResult resp;
         if (document != null) {
             final Class documentClass = document.getClass();
             if (ThriftUtils.isMapped(documentClass)) {
                 AttachmentContent content = (AttachmentContent) document;
-                try {
-                    InputStream in = getAttachment(content.getId(), content.getFilename());
-                    resp = database.update(document);
-                    createAttachment(resp.getId(), content.getFilename(), in, content.getContentType());
-                } catch (NoDocumentException e) {
-                    resp = database.update(document);
-                    log.debug("No attachment associated with the document. Updating attachment content non metadata only");
-                }
+                InputStream in = getAttachment(content.getId(), content.getFilename());
+                resp = this.updateWithResponse(document);
+                createAttachment(resp.getId(), content.getFilename(), in, content.getContentType());
             } else {
-                resp = database.update(document);
+                resp = this.updateWithResponse(document);
             }
             if (TBase.class.isAssignableFrom(document.getClass())) {
                 TBase tbase = (TBase) document;
@@ -101,10 +84,17 @@ public class DatabaseConnectorCloudant {
         }
     }
 
-    public Response updateWithResponse(Object document) {
-        Response resp = null;
+    public DocumentResult updateWithResponse(Object document) {
+        DocumentResult resp = null;
+        Document doc = getDocumentFromPojo(document);
         if (document != null) {
-            resp = database.update(document);
+            PutDocumentOptions putDocumentOption = new PutDocumentOptions.Builder()
+                    .db(this.dbName)
+                    .docId(doc.getId())
+                    .document(doc)
+                    .build();
+
+            resp = this.instance.getClient().putDocument(putDocumentOption).execute().getResult();
         }
         return resp;
     }
@@ -116,13 +106,19 @@ public class DatabaseConnectorCloudant {
     public <T> Set<String> getAllIds(Class<T> type) {
         Set<String> ids = Sets.newHashSet();
         try {
-            List<Row<String, Object>> rows = database.getViewRequestBuilder(type.getSimpleName(), "all")
-                    .newRequest(Key.Type.STRING, Object.class).build().getResponse().getRows();
-            for (Row<String, Object> r : rows) {
+            PostViewOptions viewOptions = new PostViewOptions.Builder()
+                    .db(this.dbName)
+                    .ddoc(type.getSimpleName())
+                    .view("all")
+                    .build();
+
+            ViewResult response = this.instance.getClient().postView(viewOptions).execute().getResult();
+            List<ViewResultRow> rows = response.getRows();
+            for (ViewResultRow r : rows) {
                 String id = r.getId();
                 ids.add(id);
             }
-        } catch (IOException e) {
+        } catch (ServiceResponseException e) {
             log.error("Error fetching ids", e);
         }
         return ids;
@@ -130,7 +126,13 @@ public class DatabaseConnectorCloudant {
 
     public <T> T get(Class<T> type, String id) {
         try {
-            T obj = (T) database.find(type, id);
+            GetDocumentOptions documentOption = new GetDocumentOptions.Builder()
+                    .db(this.dbName)
+                    .docId(id)
+                    .build();
+            Document doc = this.instance.getClient().getDocument(documentOption).execute().getResult();
+            T obj = this.getPojoFromDocument(doc, type);
+
             String extractedType = null;
             Field[] f = obj.getClass().getDeclaredFields();
             for (Field fi : f) {
@@ -158,8 +160,17 @@ public class DatabaseConnectorCloudant {
     public <T> List<T> getAll(Class<T> type) {
         List<T> list = Lists.newArrayList();
         try {
-            list = database.getViewRequestBuilder(type.getSimpleName(), "all").newRequest(Key.Type.STRING, Object.class)
-                    .includeDocs(true).build().getResponse().getDocsAs(type);
+            PostViewOptions viewOptions = new PostViewOptions.Builder()
+                    .db(this.dbName)
+                    .ddoc(type.getSimpleName())
+                    .view("all")
+                    .includeDocs(true)
+                    .build();
+
+            ViewResult response = this.instance.getClient().postView(viewOptions).execute().getResult();
+            List<ViewResultRow> rows = response.getRows();
+
+            list = rows.stream().map(r -> this.getPojoFromDocument(r.getDoc(), type)).collect(Collectors.toList());
         } catch (Exception e) {
             log.error("Error getting documents", e);
         }
@@ -167,12 +178,54 @@ public class DatabaseConnectorCloudant {
     }
 
     public boolean remove(String id) {
-        Response resp = database.remove(id);
-        boolean success = resp.getStatusCode() == HttpStatus.SC_OK ? true : false;
+        DeleteDocumentOptions deleteOption = new DeleteDocumentOptions.Builder()
+                .db(this.dbName)
+                .docId(id)
+                .build();
+
+        DocumentResult resp = this.instance.getClient().deleteDocument(deleteOption).execute().getResult();
+        boolean success = resp.isOk();
         if (!success) {
             log.error("Could not delete document with id: " + id);
         }
         return success;
+    }
+
+    public List<Document> getDocuments(Collection<String> ids) {
+        if (!CommonUtils.isNotEmpty(ids))
+            return Collections.emptyList();
+        try {
+            Set<String> idSet = new HashSet<>(ids);
+
+            PostAllDocsOptions postDocsOption = new PostAllDocsOptions.Builder()
+                    .db(this.dbName)
+                    .keys(idSet.stream().toList())
+                    .includeDocs(true)
+                    .build();
+
+            AllDocsResult resp = this.instance.getClient().postAllDocs(postDocsOption).execute().getResult();
+
+            return resp.getRows().stream()
+                    .map(DocsResultRow::getDoc)
+                    .filter(Objects::nonNull).collect(Collectors.toList());
+        } catch (ServiceResponseException e) {
+            log.error("Error fetching documents", e);
+            return Collections.emptyList();
+        }
+    }
+
+    public Document getDocument(String id) {
+        try {
+            GetDocumentOptions getDocOption = new GetDocumentOptions.Builder()
+                    .db(this.dbName)
+                    .docId(id)
+                    .build();
+
+            return this.instance.getClient().getDocument(getDocOption).execute().getResult();
+        } catch (ServiceResponseException e) {
+            log.error("Error fetching document", e);
+            return new Document();
+        }
     }
 
     public <T> List<T> get(Class<T> type, Collection<String> ids) {
@@ -180,14 +233,19 @@ public class DatabaseConnectorCloudant {
             return Collections.emptyList();
         try {
             Set<String> idSet = new HashSet<>(ids);
-            String[] keys = new String[idSet.size()];
-            int index = 0;
-            for (String str : idSet)
-                keys[index++] = str;
-            List<T> docs = database.getAllDocsRequestBuilder().includeDocs(true).keys(keys).build().getResponse()
-                    .getDocsAs(type);
-            return docs.stream().filter(Objects::nonNull).collect(Collectors.toList());
-        } catch (IOException e) {
+
+            PostAllDocsOptions postDocsOption = new PostAllDocsOptions.Builder()
+                    .db(this.dbName)
+                    .keys(idSet.stream().toList())
+                    .includeDocs(true)
+                    .build();
+
+            AllDocsResult resp = this.instance.getClient().postAllDocs(postDocsOption).execute().getResult();
+
+            return resp.getRows().stream().map(
+                    r -> this.getPojoFromDocument(r.getDoc(), type)
+            ).filter(Objects::nonNull).collect(Collectors.toList());
+        } catch (ServiceResponseException e) {
             log.error("Error fetching documents", e);
             return Collections.emptyList();
         }
@@ -197,14 +255,24 @@ public class DatabaseConnectorCloudant {
         return get(type, ids);
     }
 
-    public List<Response> executeBulk(Collection<?> list) {
-        List<Response> responses = Lists.newArrayList();
-        List entities = Lists.newArrayList(list);
+    public List<DocumentResult> executeBulk(Collection<?> list) {
+        BulkDocs bulkDocs = new BulkDocs.Builder()
+                .docs(list.stream().map(this::getDocumentFromPojo).collect(Collectors.toList()))
+                .build();
+
+        PostBulkDocsOptions bulkDocsOptions = new PostBulkDocsOptions.Builder()
+                .db(this.dbName)
+                .bulkDocs(bulkDocs)
+                .build();
+
+        List<DocumentResult> responses = Lists.newArrayList();
+
+        Object[] entities = list.toArray();
         try {
-            responses = database.bulk(entities);
-            for (int i = 0; i < entities.size(); i++) {
-                if (TBase.class.isAssignableFrom(entities.get(i).getClass())) {
-                    TBase tbase = (TBase) entities.get(i);
+            responses = this.instance.getClient().postBulkDocs(bulkDocsOptions).execute().getResult();
+            for (int i = 0; i < entities.length; i++) {
+                if (TBase.class.isAssignableFrom(entities[i].getClass())) {
+                    TBase tbase = (TBase) entities[i];
                     TFieldIdEnum id = tbase.fieldForId(1);
                     TFieldIdEnum rev = tbase.fieldForId(2);
                     tbase.setFieldValue(id, responses.get(i).getId());
@@ -218,34 +286,64 @@ public class DatabaseConnectorCloudant {
         return responses;
     }
 
-    public List<Response> deleteBulk(Collection<?> deletionCandidates) {
-        return deletionCandidates.stream().map(x -> database.remove(x)).collect(Collectors.toList());
+    public List<DocumentResult> deleteBulk(Collection<Document> deletionCandidates) {
+        BulkDocs bulkDocs = new BulkDocs.Builder()
+                .docs(
+                        deletionCandidates.stream()
+                                .peek(d -> d.setDeleted(true))
+                                .collect(Collectors.toList()))
+                .build();
+
+        PostBulkDocsOptions bulkDocsOptions = new PostBulkDocsOptions.Builder()
+                .db(this.dbName)
+                .bulkDocs(bulkDocs)
+                .build();
+
+        return this.instance.getClient().postBulkDocs(bulkDocsOptions).execute().getResult();
     }
 
-    public <T> List<Response> deleteIds(Class<T> type, Collection<String> ids) {
-        final List<T> deletionCandidates = get(type, ids);
+    public List<DocumentResult> deleteIds(Collection<String> ids) {
+        final List<Document> deletionCandidates = getDocuments(ids);
         return deleteBulk(deletionCandidates);
     }
 
     public <T> int getDocumentCount(Class<T> type) {
         int count = 0;
         try {
-            count = database.getViewRequestBuilder(type.getSimpleName(), "all")
-                    .newRequest(Key.Type.STRING, Object.class).includeDocs(false).limit(0).build().getResponse()
-                    .getTotalRowCount().intValue();
-        } catch (IOException e) {
+            PostViewOptions viewOption = new PostViewOptions.Builder()
+                    .db(this.dbName)
+                    .ddoc(type.getSimpleName())
+                    .view("all")
+                    .includeDocs(false)
+                    .limit(0)
+                    .build();
+
+            count = this.instance.getClient().postView(viewOption).execute().getResult().getTotalRows().intValue();
+        } catch (ServiceResponseException e) {
             log.error("Error getting document count", e);
         }
         return count;
     }
 
-    public <T> int getDocumentCount(Class<T> type, String viewName, String []keys) {
+    public <T> int getDocumentCount(Class<T> type, String viewName, String[] keys) {
         int count = 0;
         try {
-            ViewResponse<String, Integer> response = database.getViewRequestBuilder(type.getSimpleName(), viewName)
-                    .newRequest(Key.Type.STRING, Integer.class).keys(keys).includeDocs(false).group(true).reduce(true).build().getResponse();
-            count = response.getValues().stream().mapToInt(x->x).sum();
-        } catch (IOException e) {
+            PostViewOptions viewOption = new PostViewOptions.Builder()
+                    .db(this.dbName)
+                    .ddoc(type.getSimpleName())
+                    .view(viewName)
+                    .keys(Arrays.asList(keys))
+                    .includeDocs(false)
+                    .group(true)
+                    .reduce(true)
+                    .build();
+
+            ViewResult resp = this.instance.getClient().postView(viewOption).execute().getResult();
+
+            count = resp.getRows().stream()
+                    .mapToInt(r -> Integer.parseInt(r.getValue().toString()))
+                    .sum();
+        } catch (ServiceResponseException e) {
             log.error("Error getting document count", e);
         }
         return count;
@@ -256,26 +354,61 @@ public class DatabaseConnectorCloudant {
     }
 
     public InputStream getAttachment(String docId, String attachmentName) {
-        return database.getAttachment(docId, attachmentName);
+        GetAttachmentOptions attachmentOptions =
+                new GetAttachmentOptions.Builder()
+                        .db(this.dbName)
+                        .docId(docId)
+                        .attachmentName(attachmentName)
+                        .build();
+
+        return this.instance.getClient().getAttachment(attachmentOptions).execute()
+                .getResult();
     }
 
-    public void createAttachment(String attachmentContentId, String fileName, InputStream attachmentInputStream,
-            String contentType) {
-        String revision = database.find(AttachmentContent.class, attachmentContentId).getRevision();
-        database.saveAttachment(attachmentInputStream, fileName, contentType, attachmentContentId, revision);
+    public void createAttachment(String attachmentContentId, String fileName,
+                                 InputStream attachmentInputStream, String contentType) {
+        GetDocumentOptions documentOption = new GetDocumentOptions.Builder()
+                .db(this.dbName)
+                .docId(attachmentContentId)
+                .build();
+        Document doc = this.instance.getClient().getDocument(documentOption).execute().getResult();
+        String revision = doc.getRev();
+
+        PutAttachmentOptions attachmentOptions =
+                new PutAttachmentOptions.Builder()
+                        .db(this.dbName)
+                        .docId(attachmentContentId)
+                        .attachmentName(fileName)
+                        .attachment(attachmentInputStream)
+                        .contentType(contentType)
+                        .rev(revision)
+                        .build();
+
+        this.instance.getClient().putAttachment(attachmentOptions).execute()
+                .getResult();
     }
 
-    public <T> boolean deleteById(Class<T> type, String id) {
-        Response result = null;
-        if (database.contains(id)) {
-            T obj = get(type, id);
-            result = database.remove(obj);
+    public boolean deleteById(String id) {
+        if (this.contains(id)) {
+            Document doc = getDocument(id);
+
+            DeleteDocumentOptions deleteOption = new DeleteDocumentOptions.Builder()
+                    .db(this.dbName)
+                    .docId(id)
+                    .rev(doc.getRev())
+                    .build();
+            return this.instance.getClient().deleteDocument(deleteOption).execute().getResult().isOk();
         }
-        return result.getStatusCode() == HttpStatus.SC_OK ? true : false;
+        return true;
     }
 
     public <T> boolean add(T doc) {
-        Response resp = database.save(doc);
+        PostDocumentOptions postDocOption = new PostDocumentOptions.Builder()
+                .db(this.dbName)
+                .document(this.getDocumentFromPojo(doc))
+                .build();
+
+        DocumentResult resp = this.instance.getClient().postDocument(postDocOption).execute().getResult();
         if (TBase.class.isAssignableFrom(doc.getClass())) {
             TBase tbase = (TBase) doc;
             TFieldIdEnum id = tbase.fieldForId(1);
@@ -283,20 +416,47 @@ public class DatabaseConnectorCloudant {
             tbase.setFieldValue(id, resp.getId());
             tbase.setFieldValue(rev, resp.getRev());
         }
-        return resp.getStatusCode() == HttpStatus.SC_CREATED ? true : false;
+        return resp.isOk();
     }
 
     public <T> boolean remove(T doc) {
-        Response result = database.remove(doc);
-        return result.getStatusCode() == HttpStatus.SC_OK ? true : false;
+        return this.remove(this.getDocumentFromPojo(doc).getId());
     }
 
-    public DesignDocumentManager getDesignDocumentManager() {
-        return database.getDesignDocumentManager();
+    public boolean putDesignDocument(DesignDocument designDocument, String docId) {
+        PutDesignDocumentOptions designDocumentOptions =
+                new PutDesignDocumentOptions.Builder()
+                        .db(this.dbName)
+                        .designDocument(designDocument)
+                        .ddoc(docId)
+                        .build();
+
+        DocumentResult response =
+                this.instance.getClient()
+                        .putDesignDocument(designDocumentOptions).execute()
+                        .getResult();
+        boolean success = response.isOk();
+        if (!success) {
+            log.error("Unable to put design document {} to {}. Error: {}",
+                    designDocument.getId(), docId, response.getError());
+        }
+        return success;
     }
 
-    public void createIndex(String indexDefinition) {
-        database.createIndex(indexDefinition);
+    public void createIndex(IndexDefinition indexDefinition, String indexName,
+                            String indexType) {
+        PostIndexOptions indexOptions = new PostIndexOptions.Builder()
+                .db(this.dbName)
+                .index(indexDefinition)
+                .name(indexName)
+                .type(indexType)
+                .build();
+
+        try {
+            this.instance.getClient().postIndex(indexOptions).execute().getResult();
+        } catch (ServiceResponseException e) {
+            log.error("Error creating index", e);
+        }
     }
 
     public <T> QueryResult<T> getQueryResult(String query, Class<T> type) {
@@ -304,12 +464,17 @@ public class DatabaseConnectorCloudant {
     }
 
     public <T> Set<String> getDistinctSortedStringKeys(Class<T> type, String viewName) {
-        ViewRequest<String, String> countReq1 = database.getViewRequestBuilder(type.getSimpleName(), viewName)
-                .newRequest(Key.Type.STRING, String.class).includeDocs(false).build();
+        PostViewOptions viewOptions = new PostViewOptions.Builder()
+                .db(this.dbName)
+                .ddoc(type.getSimpleName())
+                .view(viewName)
+                .includeDocs(false)
+                .build();
         try {
-            ViewResponse<String, String> response = countReq1.getResponse();
-            return new TreeSet<String>(response.getKeys());
-        } catch (IOException e) {
+            ViewResult response = this.instance.getClient().postView(viewOptions).execute().getResult();
+            return response.getRows().stream()
+                    .map(r -> r.getKey().toString()).collect(Collectors.toCollection(TreeSet::new));
+        } catch (ServiceResponseException e) {
             log.error("Error in getting project groups", e);
         }
         return Collections.emptySet();
@@ -319,18 +484,42 @@ public class DatabaseConnectorCloudant {
         if (!CommonUtils.isNotEmpty(ids))
             return Collections.emptyList();
         try {
-            List<String> idList = new ArrayList<>(ids);
-            String[] keys = idList.stream().toArray(String[]::new);
-            List<T> docs = database.getAllDocsRequestBuilder().includeDocs(true).keys(keys).build().getResponse()
-                    .getDocsAs(type);
-            return docs.stream().filter(Objects::nonNull).collect(Collectors.toList());
-        } catch (IOException e) {
+            PostAllDocsOptions postAllDocsOption = new PostAllDocsOptions.Builder()
+                    .db(this.dbName)
+                    .includeDocs(true)
+                    .keys(ids.stream().toList())
+                    .build();
+
+            AllDocsResult resp = this.instance.getClient().postAllDocs(postAllDocsOption).execute().getResult();
+            return resp.getRows().stream()
+                    .map(r -> this.getPojoFromDocument(r.getDoc(), type))
+                    .filter(Objects::nonNull)
+                    .collect(Collectors.toList());
+        } catch (ServiceResponseException e) {
             log.error("Error fetching documents", e);
             return Collections.emptyList();
         }
     }
 
-    public Database getDatabase() {
-        return database;
+    public Document getDocumentFromPojo(Object document) {
+        Document doc = new Document();
+        Gson gson = this.instance.getGson();
+        doc.setProperties(gson.fromJson(gson.toJson(document), Map.class));
+        return doc;
+    }
+
+    public <T> T getPojoFromDocument(Document document, Class<T> type) {
+        return this.instance.getGson().fromJson(document.toString(), type);
+    }
+
+    public boolean contains(String docId) {
+        HeadDocumentOptions documentOptions =
+                new HeadDocumentOptions.Builder()
+                        .db(this.dbName)
+                        .docId(docId)
+                        .build();
+
+        return this.instance.getClient().headDocument(documentOptions).execute()
+                .getStatusCode() == 200;
     }
 }
